--- a/learn.html
+++ b/learn.html
@@ -62,7 +62,7 @@
 		</div>
 	</nav>
 	<!------content-------->
-	<div class="container-fluid d-block w-100">
+	<div class="container-fluid d-block w-100" style="margin-bottom: -50px;">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="learn-box-out">
