--- a/testimonials.html
+++ b/testimonials.html
@@ -131,8 +131,8 @@
 			</div>
 			<div class="col-md-4">
 				<div class="text-center enshi">
-					<a href="https://www.pornhub.com/" target="_blank"><img src="ensh1.jpg" alt="sale product"></a>
-					<a href="https://www.pornhub.com/" target="_blank"><h2>Enshi Pejo</h2></a>
+					<img src="ensh1.jpg" alt="sale product">
+					<h2>Enshi Pejo</h2>
 					<p>"Challenges are what make life interesting. Overcoming them is what makes life meaningful."</p>
 				</div>
 			</div>
@@ -145,8 +145,8 @@
 			</div>
 			<div class="col-md-4">
 				<div class="text-center ver">
-					<a href="http://www.gaytube.com/" target="_blank"><img src="ver.jpg" alt="sale product"></a>
-					<a href="http://www.gaytube.com/" target="_blank"><h2>Denver Golosinda</h2></a>
+					<img src="ver.jpg" alt="sale product">
+					<h2>Denver Golosinda</h2>
 					<p>"Power is Power."</p>
 				</div>
 			</div>
