--- a/testimonials.html
+++ b/testimonials.html
@@ -150,6 +150,13 @@
 					<p>"Power is Power."</p>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="text-center">
+					<img src="kass.jpg" alt="sale product">
+					<h2>Kassey Panget</h2>
+					<p>"I love you panget."</p>
+				</div>
+			</div>
 		</div>
 	<hr class="line1">
 	</div>
