--- a/testimonials.html
+++ b/testimonials.html
@@ -154,7 +154,7 @@
 				<div class="text-center">
 					<img src="kass.jpg" alt="sale product">
 					<h2>Kassey Panget</h2>
-					<p>"I love you panget."</p>
+					<p>"My name is panget and I'm very panget."</p>
 				</div>
 			</div>
 		</div>
