--- a/testimonials.html
+++ b/testimonials.html
@@ -153,8 +153,8 @@
 			<div class="col-md-4">
 				<div class="text-center">
 					<img src="kass.jpg" alt="sale product">
-					<h2>Kassey Panget</h2>
-					<p>"My name is panget and I'm very panget."</p>
+					<h2>Kassey Iyakin</h2>
+					<p>"My name is Kassey and I'm very iyakin."</p>
 				</div>
 			</div>
 		</div>
