--- a/testimonials.html
+++ b/testimonials.html
@@ -157,6 +157,13 @@
 					<p>"My name is Kassey and I'm very iyakin."</p>
 				</div>
 			</div>
+			<div class="col-md-4">
+				<div class="text-center">
+					<img src="pat.jpg" alt="sale product">
+					<h2>Patrick Uchiha</h2>
+					<p>"This is not no Naruto, but I chop that like Sasuke."</p>
+				</div>
+			</div>
 		</div>
 	<hr class="line1">
 	</div>
