--- a/testimonials.html
+++ b/testimonials.html
@@ -159,7 +159,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="text-center">
-					<img src="pat.jpg" alt="sale product">
+					<img src="pat.JPG" alt="sale product">
 					<h2>Patrick Uchiha</h2>
 					<p>"This is not no Naruto, but I chop that like Sasuke."</p>
 				</div>
